# r2048

./: .gitignore  README.md  trainer_loop.py
r2048_core/: Cargo.toml
r2048_core/src/: environment.rs  game_logger.rs  game_play.rs  lib.rs  main.rs
r2048_core/src/move_selector/: mcts.rs  minimax.rs  mod.rs  policy_selector.rs  random.rs
r2048_core/src/move_selector/tools/: game_tree_creator.rs  mod.rs  move_policy.rs  node_evaluator.rs  (+1 more)
r2048_core/src/types/: errors.rs  game.rs  game_history.rs  mod.rs  move_direction.rs  move_maker.rs  number_popper.rs  position.rs
r2048_core/src/ui/: console_ui.rs  mod.rs  noop_ui.rs
tiny_cnn/: Cargo.toml
tiny_cnn/src/: inference.rs  layers.rs  lib.rs  model_loader.rs  persistence.rs  utils.rs
tiny_cnn/src/model/: mod.rs  model1.rs  policy_model.rs
training/: pyproject.toml
training/src/model_training/: main.py  types.py
training/src/model_training/data/: batch_sampler.py  dataset.py
training/src/model_training/preprocess/: data_loader.py  file_parser.py  validation_sampler.py
training/src/model_training/train/: trainer.py  validator.py
training/src/train_manager/: main.py  simulator_runner.py  train_handler.py  train_manager.py
training/src/training/: train.py  trainer.py  types.py
training/src/training/data/: batch_sampler.py  dataset.py  trajectory.py
training/src/training/models/: base.py  model1.py  policy_network.py
training/src/training/preprocess/: data_loader.py  types.py  validation_sampler.py
training/src/training/train/: validator.py
training/src/training/utils/: config.py  data_loader.py  metrics.py  model_loader.py
(+4 files in other folders)
