[project]
name = "training" 
version = "0.1.0"
description = "Training utilities for the 2048 CNN model"
requires-python = ">=3.8"
dependencies = [
]


[project.optional-dependencies]
model_training = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
    "pyyaml>=5.4.0",
]
train_manager = [
    "training[model_training]",  # Depends on model_training
]

[project.scripts]
train-manager = "train_manager.main:main"
train-2048 = "model_training.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/model_training",
    "src/train_manager",
]

[tool.hatch.metadata]
allow-direct-references = true